--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "nanoid": "^5.0.9",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "jest": "^29.7.0",
